lab1/Test/L1-A-10-68.output
Error Type A at Line 8
Error Type B at Line 9
Error Type A at Line 12
Error Type B at Line 16
Error Type B at Line 22
Error Type A at Line 26
Error Type A at Line 36
Error Type B at Line 42
Error Type A at Line 45
